<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.envivoymas.ui.authentication.forgotPassword.ForgotViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_25sdp"
            android:background="@drawable/arrow_arrow"
            android:src="@drawable/arrow"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingVertical="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_tittle"
                android:textColor="@color/black"
                android:textSize="@dimen/_24ssp"
                style="@style/TextViewStyleBold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/don_t_worry_it_occurs_please_enter_the_email_address_linked_with_your_account"
                android:textColor="@color/gray"
                android:textSize="@dimen/_13ssp"
                style="@style/TextViewLightStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forget" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/back"
                app:layout_constraintEnd_toEndOf="@+id/content"
                app:layout_constraintStart_toStartOf="@+id/content"
                app:layout_constraintTop_toBottomOf="@+id/content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_14sdp"
                    android:src="@drawable/__icon__envelope_closed_"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    style="@style/InputEditText"
                    android:importantForAccessibility="no"
                    android:inputType="textEmailAddress"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:hint="@string/enter_your_email"
                    android:text="@={viewModel.emailId}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageEmail"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                style="@style/btnLayerStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/_47sdp"
                android:background="@drawable/btn_black_background_layer"
                android:text="@string/send_code"
                android:id="@+id/forgetCode"
                android:layout_marginTop="@dimen/_35sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>