<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_common" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                    android:id="@+id/calendar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250sdp"
                    android:theme="@style/MyMaterialCalendarTheme"
                    app:mcv_selectionMode="none"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:mcv_dateTextAppearance="@style/CustomTextAppearance"
                    custom:layout_constraintEnd_toEndOf="parent"
                    custom:layout_constraintStart_toStartOf="parent"
                    custom:layout_constraintTop_toTopOf="parent"
                   />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    custom:layout_constraintEnd_toEndOf="parent"
                    custom:layout_constraintStart_toStartOf="parent"
                    custom:layout_constraintTop_toBottomOf="@+id/calendar">


                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:orientation="vertical"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        custom:layout_constraintTop_toTopOf="parent">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:layout_margin="@dimen/_5sdp"
                            android:elevation="@dimen/_3sdp"
                            android:shadowColor="@color/yellow"
                            android:background="@drawable/csmt_selected_tab"
                            tools:ignore="UselessParent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/select"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:background="@drawable/cstm_un_selected_tab"
                                    android:text="" />

                                <TextView
                                    android:id="@+id/select2"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="" />

                                <TextView
                                    android:id="@+id/select3"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <com.google.android.material.textview.MaterialTextView
                                    style="@style/TextViewStyleSemiBold"
                                    android:id="@+id/item1"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="@string/admin_tab"
                                    android:textColor="@color/yellow" />


                                <com.google.android.material.textview.MaterialTextView
                                    style="@style/TextViewStyleSemiBold"
                                    android:id="@+id/item2"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="@string/employee_tab" />

                                <com.google.android.material.textview.MaterialTextView
                                    style="@style/TextViewStyleSemiBold"
                                    android:id="@+id/item3"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="@string/guest_tab" />
                            </LinearLayout>
                        </FrameLayout>
                    </LinearLayout>

                    <FrameLayout
                        android:id="@+id/viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                        app:layout_constraintVertical_bias="0.0">

                    </FrameLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>